[gd_scene load_steps=8 format=3 uid="uid://cjxfv25mejm0t"]

[ext_resource type="Script" path="res://scene/ants/ant.gd" id="1_k8vmh"]
[ext_resource type="Texture2D" uid="uid://cwcbertxtwl8w" path="res://addons/kenney_input_prompts/Xbox Series/Double/xbox_button_color_b.png" id="2_qadc0"]
[ext_resource type="PackedScene" uid="uid://cis6m2sus0kvh" path="res://components/health_component.tscn" id="3_a5wcl"]
[ext_resource type="PackedScene" uid="uid://t4uyo56vutjx" path="res://components/hitbox_component.tscn" id="4_p3qd7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6a7x7"]
radius = 48.7792

[sub_resource type="CircleShape2D" id="CircleShape2D_mrwpu"]
radius = 8.01847

[sub_resource type="CircleShape2D" id="CircleShape2D_qpmsm"]
radius = 50.9902

[node name="Body" type="CharacterBody2D" groups=["ant"]]
unique_name_in_owner = true
scale = Vector2(0.2, 0.2)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_k8vmh")

[node name="Reach" type="Area2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1.37536, 1.37536)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Reach"]
shape = SubResource("CircleShape2D_6a7x7")
debug_color = Color(0.0901961, 0.654902, 0.462745, 0.419608)
metadata/_edit_lock_ = true

[node name="Vision" type="Area2D" parent="."]
rotation = 1.57079
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Vision"]
polygon = PackedVector2Array(0, 0, -319.994, -960.002, 320.006, -959.998)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.57079
texture = ExtResource("2_qadc0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(4.98848, 4.98848)
shape = SubResource("CircleShape2D_mrwpu")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
path_postprocessing = 1
avoidance_enabled = true
neighbor_distance = 100.0
max_neighbors = 3

[node name="HealthComponent" parent="." instance=ExtResource("3_a5wcl")]

[node name="HitboxComponent" parent="." instance=ExtResource("4_p3qd7")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_qpmsm")
debug_color = Color(0.894118, 0, 0, 0.337255)

[connection signal="body_entered" from="Reach" to="." method="_on_reach_body_entered"]
[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
